legacy/kubernetes/basic/kubia.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubia
spec:
  containers:
  - image: gcr.io/$PROJECT_ID/kubia:v1
    name: kubia
    ports:
    - containerPort: 8080
      protocol: TCP
