legacy/kubernetes/basic/kubia-svc-loadbalancer-blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-loadbalancer
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: kubia
    version: "1.0"
