legacy/kubernetes/basic/kubia-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubia
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: kubia-nodeport
          servicePort: 80
